--- a/ovk/.htaccess
+++ b/ovk/.htaccess
@@ -18,6 +18,7 @@ ExpiresByType image/x-icon "access plus 2592000 seconds"
 ExpiresByType image/jpeg "access plus 2592000 seconds"
 ExpiresByType image/png "access plus 2592000 seconds"
 ExpiresByType image/gif "access plus 2592000 seconds"
+ExpiresByType image/svg+xml "access plus 2592000 seconds"
 
 # Cache Fonts
 ExpiresByType application/vnd.ms-fontobject "access plus 2592000 seconds"
